last commit before readme

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
     <div class="container">
-        <div class="jumbotron" style="background-color: gray; color: white;">
+        <div class="jumbotron" style="background-color:rgba(209, 209, 224,.9); color:black;">
             <h1 class="text-center">Doomed Trains Schedule</h1>
             <h3 class="text-center">Company is not responsible for stolen property</h3>
         </div>
@@ -47,14 +47,6 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td scope="col">Train</td>
-                                    <td scope="col">Destination</td>
-                                    <td scope="col">Frequency (min)</td>
-                                    <td scope="col">Next Arrival</td>
-                                    <td scope="col">Minutes Away</td>
-
-                                </tr>
                             </tbody>
                         </table>
                     </div>
@@ -82,7 +74,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="first-train-input">First Train Time (HH:mm - military time)</label>
-                                <input class="form-control" id="first-train-input" placeholder="13:45" type="time">
+                                <input class="form-control" id="first-train-input" placeholder="13:45" type="text">
                             </div>
                             <div class="form-group">
                                 <label for="frequency-input">Frequency (min)</label>
